gitops/applications/base/monitoring/s5cmd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s5cmd
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: s5cmd
        image: peakcom/s5cmd:latest
        command: ["/bin/sh", "sleep", "10h"]
        ports:
        - containerPort: 80
