gitops/applications/base/monitoring/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-ui
  # namespace: ${ARGOCD_ENV_gitlab_namespace}
  namespace: monitoring
spec:
  gateways:
    # - ${ARGOCD_ENV_gitlab_istio_gateway_namespace}/${ARGOCD_ENV_gitlab_istio_wildcard_gateway_name}
    - istio-ingress-ext/external-wildcard-gateway 
  hosts:
    # - "grafana.${ARGOCD_ENV_gitlab_dns_subdomain}"
    - grafana.cc32.ccnew.mojaloop.live
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana-service
            port:
              number: 3000
